<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup">


    <TextView
        android:id="@+id/signup_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="Sign Up"
        android:textColor="@color/black"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/login_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/signupinfo" />

    <TextView
        android:id="@+id/socialline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_line"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:text="@string/socialline" />


    <ImageButton
        android:id="@+id/google_btn"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/socialline"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/round_btn"
        android:backgroundTint="@color/white"
        android:outlineAmbientShadowColor="@color/black"
        android:src="@drawable/google" />

    <ImageButton
        android:id="@+id/facebook_btn"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/socialline"
        android:layout_alignBaseline="@id/google_btn"
        android:layout_alignBottom="@id/google_btn"
        android:layout_marginLeft="240dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/round_btn"
        android:backgroundTint="#3b5998"
        android:outlineAmbientShadowColor="@color/black"
        android:src="@drawable/facebook" />

    <TextView
        android:id="@+id/loginifo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/google_btn"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/signupline" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="Email"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_below="@id/loginifo"
        android:layout_marginTop="40dp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="Password"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/editTextTextEmailAddress" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextTextPassword"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="34dp"
        android:text="I agree with Privacy Policy" />


    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_below="@id/radioButton"
        android:layout_marginTop="30dp"
        android:text="@string/sign_up"
        android:background="@drawable/round_btn"
        android:backgroundTint="#528AAE"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="Don't have an account?" />

    <TextView
        android:id="@+id/sigup_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btn"
        android:text="login"
        android:textColor="@color/blue"
        android:layout_marginTop="30dp"
        android:layout_toRightOf="@id/textView2" />



</RelativeLayout>